[package]
name = "wiimote-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["cesmec"]

[dependencies]
bitflags = "2.4"
crossbeam-channel = "0.5"
# Use hidraw instead of libusb for bluetooth devices
hidapi = { version = "2.4", features = ["linux-static-hidraw"], default-features = false }

[build-dependencies]
cc = "1.0"
